Fix T48413: editmesh intersect tool crash

Its important to add tri-edge intersections from both sides.